Fixes #97 - assertions for locations with fuzzy string matching